--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="section-div">
             <div class="section-projects-div-up"> 
                 <div class="section-projects-div-up-small">
-                    <a href=#><h3>Rostov-on-Don, Admiral</h3></a>
+                    <a href=#><h3 class="gold current">Rostov-on-Don, Admiral</h3></a>
                     <a href=#><h3>Sochi Thieves</h3></a>
                     <a href=#><h3>Rostov-on-Don, Patriotic</h3></a>
                 </div>
